--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "ng": "ng",
     "build": "npm run env -s && ng build --prod",
-    "start": "npm run env -s && ng serve --proxy-config proxy.conf.js",
+    "start": "concurrently --kill-others --names \"NG,MOCK\" -c \"bgRed.bold,bgMagenta.bold\" \"npm run env -s && ng serve\" \"npm run mockserver\"",
     "serve:sw": "npm run build -s && npx http-server ./dist -p 4200",
     "mockserver": "json-server --watch ./mockujin/db.json",
     "lint": "ng lint && stylelint \"src/**/*.scss\" --syntax scss && htmlhint \"src\" --config .htmlhintrc",
@@ -33,6 +33,7 @@
     "@angular/service-worker": "^9.1.0",
     "@fortawesome/fontawesome-free": "^5.1.0",
     "@ng-bootstrap/ng-bootstrap": "^6.0.2",
+    "@ng-select/ng-select": "^4.0.0",
     "@ngx-translate/core": "^12.0.0",
     "bootstrap": "^4.1.1",
     "json-server": "^0.16.1",
@@ -42,10 +43,10 @@
   },
   "devDependencies": {
     "@angular-builders/jest": "^8.3.2",
+    "@angular-devkit/build-angular": "^0.901.0",
     "@angular/cli": "~9.1.0",
     "@angular/compiler-cli": "^9.1.0",
     "@angular/language-service": "^9.1.0",
-    "@angular-devkit/build-angular": "^0.901.0",
     "@angularclass/hmr": "^2.1.3",
     "@biesbjerg/ngx-translate-extract": "^4.2.0",
     "@ngx-rocket/scripts": "^4.0.0",
@@ -54,24 +55,25 @@
     "@types/jest": "^25.1.2",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "concurrently": "^5.2.0",
     "hads": "^2.0.1",
     "htmlhint": "^0.11.0",
     "https-proxy-agent": "^5.0.0",
+    "husky": "^4.2.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.1",
     "jest": "^25.1.0",
     "prettier": "^2.0.2",
-    "tslint-config-prettier": "^1.14.0",
-    "stylelint-config-prettier": "^8.0.1",
     "pretty-quick": "^2.0.1",
-    "husky": "^4.2.3",
     "protractor": "~5.4.3",
     "stylelint": "~13.2.1",
+    "stylelint-config-prettier": "^8.0.1",
     "stylelint-config-recommended-scss": "~4.2.0",
     "stylelint-config-standard": "~20.0.0",
     "stylelint-scss": "~3.16.0",
     "ts-node": "^8.8.1",
     "tslint": "~5.20.1",
+    "tslint-config-prettier": "^1.14.0",
     "typescript": "~3.8.3"
   },
   "prettier": {
